--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,34 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="NewTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/pink</item>
+        <item name="colorPrimaryDark">@color/dark</item>
+        <item name="colorAccent">@color/pink</item>
+    </style>
+
+    <style name="Widget.MyApp.MyButton" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/lightPink</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/dark</item>
+        <item name="elevation">2dp</item>
+
+    </style>
+
+    <style name="MyTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <!-- Style attributes -->
+        <item name="boxCornerRadiusBottomStart">24dp</item>
+        <item name="boxCornerRadiusTopStart">24dp</item>
+        <item name="boxCornerRadiusTopEnd">24dp</item>
+        <item name="boxCornerRadiusBottomEnd">24dp</item>
+        <!-- Theme attributes -->
+        <item name="android:textColorHint">#80000000</item>
+        <item name="colorControlNormal">#000</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
+
+    </style>
+
+
+
 </resources>
