--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,10 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutEditName"
         style="@style/MyTextInputLayout"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginTop="50dp"
         android:contentDescription="Enter name"
         android:gravity="center"
@@ -36,9 +38,10 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTxtName"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -46,8 +49,10 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutEditWeight"
         style="@style/MyTextInputLayout"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:contentDescription="Enter weight"
         android:gravity="center"
         android:hint="@string/enter_weight"
@@ -60,7 +65,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTxtWeight"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:inputType="number"/>
@@ -69,9 +74,11 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutEditHeight"
         style="@style/MyTextInputLayout"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:contentDescription="Enter height"
         android:gravity="center"
         android:hint="@string/enter_height"
@@ -84,7 +91,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTxtHeight"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:inputType="number"/>
@@ -93,9 +100,11 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutEditGoal"
         style="@style/MyTextInputLayout"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:contentDescription="Set daily goal"
         android:gravity="center"
         android:hint="@string/enter_goal"
@@ -108,7 +117,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTxtGoal"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:inputType="number"
