--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="@color/lightPink"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
     <TextView
         android:id="@+id/textView"
@@ -28,7 +29,6 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="50dp"
-        android:layout_marginHorizontal="50dp"
         android:contentDescription="Enter name"
         android:gravity="center"
         android:hint="@string/enter_name"
@@ -39,7 +39,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTxtName"
             android:layout_width="match_parent"
@@ -48,7 +47,6 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-
         android:id="@+id/layoutEditWeight"
         style="@style/MyTextInputLayout"
         android:layout_width="match_parent"
@@ -145,7 +143,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="PLACEHOLDER ACTIVITY"/>
-
 
 
     <ImageView
