--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="colorAccent">@color/pink</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:fontFamily">@font/beantown</item>
     </style>
 
     <style name="Widget.MyApp.MyButton" parent="Widget.MaterialComponents.Button">
@@ -40,6 +41,4 @@
         <item name="android:textSize">15dp</item>
         <item name="android:textColor">@color/dark</item>
     </style>
-
-
 </resources>
