--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,8 @@
         android:hint="@string/enter_weight"
         app:endIconMode="clear_text"
         app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +89,8 @@
         android:hint="@string/enter_height"
         app:endIconMode="clear_text"
         app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
