--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,8 @@
     tools:context=".MainActivity"
     >
 
+
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -146,11 +148,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutEditGoal" />
 
-    <Button
-        android:id="@+id/placeholderbutton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="PLACEHOLDER ACTIVITY"/>
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="127dp"
@@ -161,5 +158,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_human_footprints" />
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:elevation="10dp"
+        android:background="@color/lightPink"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingHorizontal="100dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
