--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="darkPink">#be1558</color>
     <color name="lightPink">#fbcbc9</color>
     <color name="dark">#322514</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
