--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -7,6 +7,15 @@
     android:orientation="vertical"
     tools:context=".WeatherFragment">
 
+    <ImageView
+        android:id="@+id/gif"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:elevation="2dp"
+        tools:visibility="gone"
+        />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -227,12 +236,7 @@
                     tools:layout_editor_absoluteY="640dp" />
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/gif"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                tools:visibility="gone" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
