--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -46,7 +46,9 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/custom_border"
                 android:weightSum="2"
+                app:layout_constraintBottom_toTopOf="@+id/imageView6"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lv_weather">
 
@@ -55,12 +57,14 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="@drawable/rectangular"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/txtTemp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:text="@string/initial_step"
                         android:textColor="@color/dark"
                         android:textSize="40sp" />
@@ -69,6 +73,7 @@
                         android:id="@+id/txtFeel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:text="@string/initial_step"
                         android:textSize="20sp" />
 
@@ -79,10 +84,6 @@
                         android:layout_gravity="center_horizontal" />
                 </LinearLayout>
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/darkPink" />
 
                 <LinearLayout
                     android:layout_width="100dp"
@@ -172,13 +173,14 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/wind_direction"
                 app:srcCompat="@drawable/ic_anemometer"
-                app:tint="@color/darkPink" />
+                app:tint="@color/darkPink"
+                android:translationZ="90dp"/>
 
             <LinearLayout
                 android:id="@+id/wind_direction"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="80dp"
                 android:background="@drawable/circular_line_shape"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
@@ -195,6 +197,7 @@
                     android:layout_marginBottom="30dp"
                     android:text="@string/north"
                     android:textSize="12sp"
+                    android:textColor="@color/dark"
                     tools:layout_editor_absoluteX="178dp"
                     tools:layout_editor_absoluteY="507dp" />
 
@@ -209,6 +212,7 @@
                         android:layout_marginStart="25dp"
                         android:layout_marginEnd="30dp"
                         android:text="@string/west"
+                        android:textColor="@color/dark"
                         android:textSize="12sp"
                         tools:layout_editor_absoluteX="88dp"
                         tools:layout_editor_absoluteY="577dp" />
@@ -227,6 +231,7 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginEnd="25dp"
                         android:text="@string/east"
+                        android:textColor="@color/dark"
                         android:textSize="12sp"
                         tools:layout_editor_absoluteX="268dp"
                         tools:layout_editor_absoluteY="568dp" />
@@ -239,6 +244,7 @@
                     android:layout_marginBottom="20dp"
                     android:text="@string/south"
                     android:textSize="12sp"
+                    android:textColor="@color/dark"
                     tools:layout_editor_absoluteX="194dp"
                     tools:layout_editor_absoluteY="640dp" />
 
