--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -162,7 +162,8 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     app:tint="@color/darkPink"
-                    android:src="@drawable/ic_fire" />
+                    android:src="@drawable/ic_fire"
+                    />
 
                 <TextView
                     android:id="@+id/txtKcal"
